# CMake2024

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO  build.bat  build.sh  clean.bat  clean.sh  deep_build.sh  deep_install.sh  deep_large_build.sh  deep_large_install.sh  hello.cpp  install.bat  install.sh  install_python.bat  pack.sh  platform.cmake  uninstall_python.bat
DeepLibrary/: CMakeLists.txt  CMakePresets.json  DeepConfig.cmake.in  README.md
DeepLibrary/CMake/: CompilerFlags.cmake
DeepLibrary/Deep/: CMakeLists.txt
DeepLibrary/Deep/src/: Deep.cxx
DeepLibrary/deep/: CMakeLists.txt
DeepLibrary/deep/include/deep/: Deep.h
DeepLibrary/deep/src/: Deep.cxx
DeepLibrary/deep/tests/: CMakeLists.txt
DeepLibraryLarge/: CMakeLists.txt  README.md  TODO  build.bat  install.sh
DeepLibraryLarge/CMake/: BuildConfig.cmake
DeepLibraryLarge/Deep/: CMakeLists.txt
DeepLibraryLarge/Deep/include/Deep/: Config.h.in  Deep.h
DeepLibraryLarge/Deep/src/: Deep.cxx
DeepLibraryUsage/: CMakeLists.txt  CMakePresets.json  main.cxx
DeepLibraryUsage/CMake/: BuildConfig.cmake  DumpVariables.cmake
HeaderOnly/: CMakeLists.txt  CMakePresets.json  install.sh
HeaderOnly/cmake/: mylibConfig.cmake.in
HeaderOnly/include/: functional.hpp
HeaderOnly/test/: basic_checks.cxx
HeaderOnlyNew/: CMakeLists.txt
LibraryUsage/: CMakeLists.txt  CMakePresets.json  Config.cmake.in  License.txt  build.bat  build.sh  configure.bat  configure.sh  main.cxx
LibraryUsage/CMake/: BuildConfig.cmake
SPSTemplate/SPSFunctional/: CMakeLists.txt  SPSFunctionalConfig.cmake.in  clean.bat  clean.sh  install.bat  install.sh
SPSTemplate/SPSFunctional/Test/: SampleTest.cxx
SPSTemplate/SPSFunctional/include/sps/: functional.hpp
SPSTemplate/SPSUsage/: CMakeLists.txt  CMakePresets.json  clean.bat  main.cxx  usage.bat  usage.sh
StaticDynamic/Usage/: CMakeLists.txt  build.bat  build.sh  usageTest.cxx
vtkSPS/: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-python-utils.sh  build-vtk.bat  debugging_python.md  install_python.bat  install_python_debug.bat  install_vtk.bat  linux_test.sh  loc.sh  sitecustomize.py  spspython.py.in  uninstall_python.bat  uninstall_vtk.bat  wasm.sh
vtkSPS/CMake/: spsCompilerFlags.cmake  spsExternalData.cmake  spsTesting.cmake  spsVersion.cmake
vtkSPS/CMakeLocal/: SPSDetermineVersion.cmake  spsExternalData.cmake  spsModule.cmake  spsModuleTesting.cmake  spsVersion.cmake
vtkSPS/Common/Core/: CMakeLists.txt  spsABINamespace.h.in  spsMacros.h  spsVersion.cxx  spsVersion.h  spsVersionFull.h.in  spsVersionMacros.h.in  vtk.module
vtkSPS/Common/Core/JavaScriptVTK/: vtkAbstractArrayEmbinding.cxx  vtkBufferEmbinding.cxx  vtkCallbackCommandEmbinding.cxx  vtkCharArrayEmbinding.cxx  vtkCollectionEmbinding.cxx  vtkCommandEmbinding.cxx  vtkDataArrayEmbinding.cxx  vtkDoubleArrayEmbinding.cxx  vtkIdListCollectionEmbinding.cxx  vtkIdListEmbinding.cxx  vtkIdTypeArrayEmbinding.cxx  vtkLookupTableEmbinding.cxx  vtkMinimalStandardRandomSequenceEmbinding.cxx  vtkObjectBaseEmbinding.cxx  vtkObjectEmbinding.cxx  vtkPointsEmbinding.cxx  vtkRandomPoolEmbinding.cxx  vtkRandomSequenceEmbinding.cxx  vtkSMPToolsEmbinding.cxx  vtkScalarsToColorsEmbinding.cxx  vtkStdStringEmbinding.cxx  vtkUnsignedCharArrayEmbinding.cxx  vtkVariantArrayEmbinding.cxx  vtkVariantCastEmbinding.cxx  vtkVariantCreateEmbinding.cxx  vtkVariantEmbinding.cxx  vtkVariantExtractEmbinding.cxx  vtkVariantInlineOperatorsEmbinding.cxx  vtkWindowEmbinding.cxx  vtkWindowsEmbinding.cxx
vtkSPS/Common/Core/Testing/Cxx/: CMakeLists.txt  TestVersion.cxx
vtkSPS/Common/Core/Testing/JavaScript/: CMakeLists.txt  Template.js  TestSpsVersion.js
vtkSPS/Common/DataModel/: CMakeLists.txt  spsCellLocatorT.txx  spsDummy.cxx  spsDummy.h  vtk.module
vtkSPS/Doc/: all_pdf_to_slides.sh  create_ppt.py  create_ppt_from_folders.py  create_ppt_from_folders.sh  pdf_to_slides.sh
vtkSPS/Examples/General/Python/: BoxClipPolyDataSolution.py  DisplacementFilter.py  DisplacementFilterSolution.py  Distance.txt  Distance1.txt  Distance2.txt  DistanceFilter.py  InteractorStyleMesh.py  README.md  TestDisplacementPolyDataFilterPython.py  TestInteractorStyleMesh.py  cliBoxClipPolyData.py  reader.py  reader_information.py  reader_solution.py  transforms.py
vtkSPS/Filters/Core/: CMakeLists.txt  spsCenterOfMass.cxx  spsCenterOfMass.h  spsImplicitPolyDataDistance.cxx  spsImplicitPolyDataDistance.h  spsImplicitPolyDataDistance.txx  vtk.module
vtkSPS/Filters/Core/Testing/: CMakeLists.txt
vtkSPS/Filters/Core/Testing/Cxx/: CMakeLists.txt  TestCenterOfMass.cxx
vtkSPS/Filters/General/: CMakeLists.txt  spsDistancePolyDataFilter.cxx  spsDistancePolyDataFilter.h  vtk.module
vtkSPS/Filters/General/Testing/Python/: TestDistance.py
vtkSPS/Filters/Modeling/: CMakeLists.txt  spsSimpleTriangleSubdivisionFilter.cxx  spsSimpleTriangleSubdivisionFilter.h  spsSimpleTriangleSubdivisionFilterExercise.cxx  spsSimpleTriangleSubdivisionFilterExercise.h  spsSimpleTriangleSubdivisionFilterSolution.cxx  vtk.module
vtkSPS/Filters/Modeling/Testing/Cxx/: CMakeLists.txt  TestSimpleTriangleSubdivision.cxx
vtkSPS/Filters/Modeling/Testing/Python/: TestSubdivision.py  addpaths.py  (+2 more)
vtkSPS/IO/General/: CMakeLists.txt  spsPolyDataPieceFilter.cxx  spsPolyDataPieceFilterExercise.cxx  spsPolyDataPieceFilterExercise.h  spsPolyDataPieceFilterSolution.cxx  vtk.module
vtkSPS/Interaction/Style/: CMakeLists.txt  spsAbstractInteractorStyleBrush.cxx  spsAbstractInteractorStyleBrush.h  spsInteractorStyleBrush.cxx  spsInteractorStyleBrush.h  spsInteractorStyleDemo.cxx  spsInteractorStyleDemo.h  spsInteractorStylePaintBrush.cxx  spsInteractorStylePaintBrush.h  spsInteractorStyleTouchPaintBrush.cxx  spsInteractorStyleTouchPaintBrush.h  vtk.kit  vtk.module
vtkSPS/Wrapping/Python/: CMakeLists.txt  sps.py
vtkSPS/Wrapping/Python/spsmodules/: __init__.py.in  all.py.in
vtkXXX/: CMakeLists.txt  README.md
vtkXXX/CMake/: tsTesting.cmake  tsVersion.cmake
vtkXXX/Common/Core/: CMakeLists.txt  tsVersion.cxx  tsVersionFull.h.in  tsVersionMacros.h.in  vtk.module
(+37 files in other folders)
